 Bug #38970 Crash in function called from falcon_init when running test cases Problem: Upon encountering IO errors, falcon crashes with assert. Solution:Instead of assert, throw an exception. This allows to more graceful error handling during Falcon startup .Error text will be written into error log and Falcon will not load.